# authorship-embeddings

./: .gitignore  README.md  data_builder.py  evaluate_model.py  model.py  prepare_data.py  prepare_reddit.py  preprocess.py  preprocessing.py  pyproject.toml  run.ipynb  run.py  trainer.py  utils.py
data/scripts/: blog_to_parquet.py  chunk_datasets.py  count_tokens.py  data_report.py  prepare_gutenberg.py  prepare_twitter.py  prepare_twitter_reddit_blog.py  ranks.py  sample_gutenberg.py  split_data.py  split_reddit.py  token_ranks.py  word_counts.py  word_ranks.py
scripts/: chunk_datasets.py  count_tokens.py  data_report.py  gutenberg_to_parquet.py  prepare_test_data.py  raw_gutenberg_report.py  reddit_to_parquet.py  split_data.py  token_ranks.py  twitter_to_parquet.py  word_counts.py  word_ranks.py
src/: data_builder.py  loss.py  model.py  run.ipynb  trainer.py  utils.py
