[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "comm==0.2.3",
    "datasets==4.5.0",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "dill==0.4.0",
    "duckdb>=1.5.3",
    "executing==2.2.1",
    "filelock==3.20.3",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.4.1",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kagglehub==1.0.0",
    "kagglesdk==0.1.16",
    "lightning==2.6.1",
    "lightning-utilities==0.15.2",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pip==26.0.1",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==23.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyreadr==0.5.4",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.6.1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "sentence-transformers==5.2.2",
    "sentry-sdk==2.53.0",
    "setuptools==80.10.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torchmetrics==1.8.2",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.1.0",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "wandb==0.25.0",
    "wcwidth==0.6.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]
